--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,9 +7,25 @@
 	justify-content: center;
 	border: 1px solid black;
 	margin: 0 7.5px 15px;
+	overflow: hidden;
+	// background-position: center;
+	// background-size: cover;
+
+	&:hover {
+		cursor: pointer;
+
+		& .background-image {
+			transform: scale(1.1);
+			transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+		}
+
+		& .content {
+			opacity: 0.9;
+		}
+	}
 
 	&.large {
-		height: 1000px;
+		height: 380px;
 	}
 
 	&:first-child {
